[workspace]
default-members = ["connectorx"]
members = ["connectorx", "connectorx-cpp"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
arrow = {version = "46", features = ["prettyprint", "ffi"]}
arrow2 = {version = "0.17", default-features = false}

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"